syntax = "proto3";

package com.aws.protobuf;
option java_outer_classname = "DealMessages";

message DealEvent {
  oneof event {
    DealExecutedEvent deal_executed = 1;
    DealCancelledEvent deal_cancelled = 2;
    DealErrorEvent deal_error = 3;
  }
}
enum OrderType {
  BUY = 0;
  SALE = 1;
}

message DealExecutedEvent {
  int64 buy_order_id = 1;
  int64 sale_order_id = 2;
  int64 buy_portfolio_id = 3;
  int64 sale_portfolio_id = 4;
  int64 count = 5;
  string lot_price = 6;
  string buy_order_price = 7;
  int64 instrument_id = 8;
}

message DealCancelledEvent {
  int64 order_id = 1;
  int64 portfolio_id = 2;
  int64 count = 3;
  string lot_price = 4;
  int64 instrument_id = 5;
  OrderType order_type = 6;
}

message DealErrorEvent {
  int64 buy_order_id = 2;
  int64 sale_order_id = 3;
  int64 buy_portfolio_id = 4;
  int64 sale_portfolio_id = 5;
  int64 instrument_id = 6;
  string description = 7;
}